--- a/semester1/An1b/sections/02_Taylor-Theory.tex
+++ b/semester1/An1b/sections/02_Taylor-Theory.tex
@@ -84,7 +84,7 @@ Voraussetzung: $f$ auf Intervall [$a;b$] mind. $(n+1)$ mal ableitbar
 \end{tabular}
 \vspace{0.3em}
 
-\subsubsection*{Bsp: Lagrange prüfung 2026}
+\subsubsection*{Bsp: Lagrange prüfung frage 2026}
 
 Die „Faustregel“ $\sin(x) \approx x$  für kleine $x$“ entspricht einer Taylor-Approximation der Sinus-Funktion bei $x_0 = 0$.\\
 \vspace{0.2em}
